--- a/src/index.css
+++ b/src/index.css
@@ -27,3 +27,19 @@
 h2 {
   text-align: center;
 }
+
+.completed {
+  text-decoration: line-through;
+}
+
+.modal {
+  position: absolute;
+  background-color: aqua;
+  top: 0px;
+  left: 0px;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
